--- a/src/app/video-tab/video-tab.component.css
+++ b/src/app/video-tab/video-tab.component.css
@@ -4,15 +4,18 @@
 }
 .left{
     flex: 70%;
+    padding: 0 15px;
 }
 .title{
     flex: 80%;
     border-style: groove;
+    padding: 0 10px;
 }
 .right{
     flex: 30%;
     overflow-y: scroll;
     border-style: groove;
+    padding: 0 15px;
 }
 .dropdown{
     display: none;
@@ -38,10 +41,34 @@
     border-style: groove;
 }
 .img{
-    flex: 30%;
+    flex: 10em;
     width: 100%;
     border-style: groove;
+    height: 75px;
 }
 .upnext-title{
     flex: 70%;
+    padding-left: 15px;
+}
+
+
+
+@media screen and (max-width: 1100px) {
+    .main {
+        flex-direction: column;
+    }
+    .left, .right {
+        flex: 100%;
+        padding: 10px 0;
+        margin: 0 8px;
+    }
+    .upnext-title{
+        flex: 75%;
+    }
+    .img{
+        flex: 11em;
+        width: 100%;
+        height: 90px;
+        
+    }
 }
