--- a/src/app/video-tab/video-tab.component.html
+++ b/src/app/video-tab/video-tab.component.html
@@ -2,43 +2,59 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div class="main">
     <!--left -->
-    <div class="left">
+    <div class="left" >
         <!-- video part -->
         <div class="video">
             <video width="100%" height="70%" controls
             poster=''
-            data-setup='{ "aspectRatio":"16:9", "playbackRates": [1, 1.5, 2] }'>>
+            data-setup='{ "aspectRatio":"640:267", "playbackRates": [1, 1.5, 2] }'>>
                 <source src={{current_video.video}} type="video/mp4">
               Your browser does not support the video tag.
               </video>
               <div class="banner">
               <div class="title">
-                <h1>{{current_video.title}}</h1>
-                <h4>{{current_video.creator}}</h4>
-              </div>
-              <div class=upvotes>
-                <i class="fa fa-thumbs-up" style="font-size:24px"></i>
-                <h3>{{current_video.upvotes}}</h3>
-              </div>
-            </div>
-        </div>
-        <!-- reference part -->
-        <div class="reference">
-            <div class="line" onclick="document.getElementById('dropdown').style.display='block'">
-                <h3> references</h3>
-            </div>
-            <div class="dropdown" id="dropdown">
-                <div *ngFor="let reference of current_video.references">
-                    <h3>{{reference}}</h3>
+                <h1 style="border-style: outset ; ">{{current_video.title}}
+                    <div style="float: right;" >
+                        <i class="fa fa-thumbs-up"></i>
+                        {{current_video.upvotes}}
+                        <i class="fa fa-thumbs-down"></i>
+                        {{ current_video.downvotes }}
+                    </div>
+                </h1>
+
+                
+                <div class="reference" >
+                        <h3 style="border-bottom:1px solid rgb(0,0,0,0.3); padding-bottom: 5px;"><img src="assets/images/user-1.jpg" height="30" width="30" style="vertical-align:middle;border-style: outset ;"/>
+                        
+
+                        {{current_video.creator}}</h3>
+
+                        <!-- reference part -->
+
+                    <div class="line" onclick="document.getElementById('dropdown').style.display='block'">
+                        <h3> references</h3>
+                    </div>
+                    <div class="dropdown" id="dropdown">
+                        <div *ngFor="let reference of current_video.references">
+                            <h3>{{reference}}</h3>
+                        </div>
+                    </div>
                 </div>
+
+                
+              </div>
+
             </div>
         </div>
+        
         <div class="add_comment"></div>
          <div class="comments" *ngFor="let comment of current_video.comments">
              <div class="comment">
-           <h1> {{comment.poster}}-{{comment.comment}}</h1>
-           <div *ngFor="let reply of comment.replies">
-           <h3>{{reply.poster}}-{{reply.comment}}</h3>
+                 <h2 style="border-bottom:5px solid red;">Comments</h2>
+            
+                <h3> <img src="assets/images/user-1.jpg" height="30" width="30" style="vertical-align:middle;"/> {{comment.poster}}-{{comment.comment}}</h3>
+                <div *ngFor="let reply of comment.replies">
+                <h3 style="padding-left: 90px;"> <img src="assets/images/user-1.jpg" height="30" width="30" style="vertical-align:middle;"/>{{reply.poster}}-{{reply.comment}}</h3>
         </div>
     </div>
          </div>
@@ -46,9 +62,9 @@
     <!-- up-next part -->
     <div class="right">
         <div class="videos" *ngFor="let video of current_video.upnext">
-            <div class="upnext-videos">
-                <div class="img">
-                    <img src="{{video.thumbnail}}" alt="thumbnail" width= 100% height=100%>
+            <div class="upnext-videos" >
+                <div class="img"  style="padding-bottom:20px;">
+                    <img src="{{video.thumbnail}}" style="border-bottom:5px solid black;"alt="thumbnail" width= 100% height=100%>
                 </div>
                 <div class="upnext-title">
                     <h3>{{video.title}}</h3>
